[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/config/remapper.gd" type="Script" id=2]

[node name="Remapper" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.52549 )
script = ExtResource( 2 )

[node name="PromptInfo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -78.0
margin_right = 192.0
margin_bottom = 78.0
align = 1
valign = 1

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="DisappearTimer" to="." method="_on_timeout"]
